--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Cat-It</title>
     <link rel="shortcut icon" type="image/x-icon" href="catpaw.ico">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.2.0/mdb.min.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -27,8 +28,12 @@
                     <img src="assets/images/playtimeicon.png" alt="Play Time Icon" class="game-icon" id="playTimeIcon">
                     <!-- Score and High Score -->
                     <div class="score" id="scorespace">
-                        <h5>Score: <span id="score">0</span></h5>
-                        <h5>High Score: <span id="highScore">0</span></h5>
+                        <div class="score-item">
+                            <h5>Score: <span id="score">0</span></h5>
+                        </div>
+                        <div class="score-item">
+                            <h5>High Score: <span id="highScore">0</span></h5>
+                        </div>
                     </div>
                     <!-- Progress Bar -->
                     <div id="myProgress">
@@ -41,13 +46,14 @@
 
     <!-- Instructions Modal -->
     <div class="modal fade" data-bs-backdrop="static" tabindex="-1" role="dialog" aria-modal="true" id="instructions">
-  <div class="modal-dialog" role="document">
+        <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <h1 class="modal-title, ms-auto">Cat-It!</h1>
                 </div>
                 <div class="modal-body">
-                    <p>Listen to the instruction and click the correct icon before the cat loses interest! But be warned... the more you play, the
+                    <p>Listen to the instruction and click the correct icon before the cat loses interest! But be
+                        warned... the more you play, the
                         quicker it gets!</p>
                 </div>
                 <div class="modal-footer">
@@ -71,26 +77,31 @@
                 </div>
                 <div class="modal-body">
                     <p>The cat lost interest! Maybe next time...</p>
-                    <p id="gamescore">Your score: </p>   
+                    <p id="gamescore">Your score: </p>
                     <p id="gamehighscore">High score: </p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-primary modal-btn loss-jpg" id="resetHighScoreLoss"
                         onclick="alert('High Score Reset!')">Reset High
                         Score</button>
-                    
+
                     <button type="button" class="btn btn-primary modal-btn" data-bs-dismiss="modal"
                         id="gameStartAgain">Play again?</button>
-                        
+
                 </div>
             </div>
         </div>
     </div>
 
     <!-- JavaScript -->
-    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.js"
+        integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.2.0/mdb.umd.min.js"></script>
     <script src="assets/js/script.js"></script>
 </body>
